# kiwoom

./: pyproject.toml
fttk/: dataframe.py  global_kiwoom.py  window.py
fttk/model/: tick.py
